@@ -1,5 +1,8 @@
-$Id: ChangeLog,v 1.367 2007/02/15 19:30:56 haraldkipp Exp $
+$Id: ChangeLog,v 1.368 2007/03/08 16:56:50 freckle Exp $
 
+2007-03-08  Matthias Ringwald <mringwal@inf.ethz.ch>
+    * arch/avr/dev/usartavr.c: moved Exit Tracer event to end of IRQ
+ 
 2007-02-15  Harald Kipp  <harald.kipp@egnite.de>
 
 	* os/version.c: Beta release 4.3.1.
